@@ -415,6 +415,26 @@ class TestProcess < Test::Unit::TestCase
     }
   end
 
+  def test_execopts_redirect_dup2_child
+    with_tmpchdir {|d|
+      Process.wait spawn(RUBY, "-e", "STDERR.print 'err'; STDOUT.print 'out'", STDOUT=>"out", STDERR=>[:child, STDOUT])
+      assert_equal("errout", File.read("out"))
+      Process.wait spawn(RUBY, "-e", "STDERR.print 'err'; STDOUT.print 'out'", STDERR=>"out", STDOUT=>[:child, STDERR])
+      assert_equal("errout", File.read("out"))
+
+      IO.popen([RUBY, "-e", "STDERR.print 'err'; STDOUT.print 'out'", STDERR=>[:child, STDOUT]]) {|io|
+        assert_equal("errout", io.read)
+      }
+
+      assert_raise(ArgumentError) {
+        Process.wait spawn(*TRUECOMMAND, STDOUT=>[:child, STDOUT])
+      }
+      assert_raise(ArgumentError) {
+        Process.wait spawn(*TRUECOMMAND, STDOUT=>[:child, 3])
+      }
+    }
+  end
+
   def test_execopts_exec
     with_tmpchdir {|d|
       write_file("s", 'exec "echo aaa", STDOUT=>"foo"')
